[metadata]
name = cdspy
author = Dave Swindell
author_email = cdswindell@comcast.net
license = GNU
version = 0.9.0
license_files = LICENSE


keywords =
    data science
    table management

    text

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
     Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: GNU License
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Data Science
    Typing :: Typed


[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
* =
    **

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
